...
        currentTrackLiked = currentTrackLiked,
    )
    val listState = rememberLazyListState()
    Box(Modifier.fillMaxWidth().padding(contentPadding)) {
        LazyColumn(
            state = listState,
            modifier = Modifier.fillMaxWidth().testTag("home-product-list"),
            contentPadding = PaddingValues(
                start = 20.dp,
                top = 0.dp,
                end = 20.dp,
                bottom = 28.dp,
            ),
...
